# Akiwa

./: .gitignore  .gitmodules  Dockerfile  README.md  config.example.toml  docker-compose.yml  main.py  pyproject.toml
docs/: api.md  config.md  deploy.md  yomiuri.md
src/: config.py  database.py  events.py  global_vars.py  schedule.py  types.py  utils.py
src/analysis/: chart.py  danmu_utils.py  live.py  user.py
src/analytics/: analysis.py  analytics.py  chart.py  danmu_utils.py  engine.py  platforms.py  post_platform.py  snapshot.py  types.py
src/collectors/: __init__.py  danmu.py  live.py  user.py
src/database/: database.py  models.py
src/database/models/: danmu.py  live.py  record.py
src/realtime/: analysis.py  database.py
src/receivers/: danmu.py  user.py
src/services/: models.py  services.py
src/yomiuri/: models.py  services.py
templates/: bilibili.jinja2  telegraph.jinja2
